tests/errors/addr_of_literal.lx
@module "main"

pub const main -> fn () int {
    let p: *int = &42;
    return 0;
}
